# FoodNotFoodFinal

./: README.md  app.py  datahandling.ipynb  model-notebook.ipynb  pyproject.toml
